Support for moving problems.
Co-authored-by: Karel Križnar <karel.kriznar@student.fmf.uni-lj.si>

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -154,6 +154,10 @@
                             data-toggle="tooltip" title="{% trans 'Copy' %}" data-container="body">
                           <i class="fa fa-copy" aria-hidden="true"></i>
                         </a>
+                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Move" data-url="{% url 'problem_move_to' problem.id %}"
+                            data-toggle="tooltip" title="{% trans 'Move to' %}" data-container="body">
+                          <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                        </a>
                         <a class="btn btn-default btn-for-modal edit-btn trash-btn" aria-label="Delete" data-url="{% url 'problem_delete' problem.id %}">
                           <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
