changed statistics name, user -> student

--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -69,8 +69,9 @@
           {% endfor %}
         </ul>
         <hr>
-        <a href="{% url 'course_groups' course.pk %}"> Pregled skupin </a> <br>
-        <a href="{% url 'statistics_landing_page' course.pk %}"> Statistika </a>
+        <a href="{% url 'course_groups' course.pk %}"> Urejanje skupin </a> <br>
+        <a href="{% url 'statistics_landing_page' course.pk %}"> Napreden pregled </a> <br>
+        <span class='color2'> &nbsp; &nbsp; * Novo - zgodovina oddaj </span>
         <hr>
         <ul class="tomo-students">
           {% for student in students %}
