changed title and refactored navbar in statistics

--- a/web/templates/statistics/contents.html
+++ b/web/templates/statistics/contents.html
@@ -17,7 +17,7 @@
 {% block content %}
 <div class="content-section-a tomo-overview-student">
   <div class="container">
-    <h2>Pregled - {{ course.title }} {% block statistics_section_name %}{% endblock %}</h2>
+    <h2>Pregled -> {{ course.title }} {% block statistics_section_name %}{% endblock %}</h2>
     <div class="row">
         <div class="col-md-2">
             <ul class="nav nav-stacked" id="sidebar">
