--- a/web/templates/statistics/solution_at_time.html
+++ b/web/templates/statistics/solution_at_time.html
@@ -2,9 +2,9 @@
 {% load i18n %}
 
 {% block navigation-left %}
-  <a class="navbar-brand topnav" href="{% url 'course_detail' problem.problem_set.course.pk %}">{{ course.title }}</a>
-  <a class="navbar-brand topnav" href="{% url 'statistics_landing_page' problem.problem_set.course.pk %}"> Pregled </a>
-  <a class="navbar-brand topnav" href="{% url 'statistics_submission_history_problemset_user' problem.problem_set.course.pk problem.problem_set.pk user.pk %}"> 
+  <a class="navbar-brand topnav" href="{% url 'course_detail' course.pk %}">{{ course.title }}</a>
+  <a class="navbar-brand topnav" href="{% url 'statistics_landing_page' course.pk %}"> Pregled </a>
+  <a class="navbar-brand topnav" href="{% url 'statistics_submission_history_problemset_user' course.pk problem.problem_set.pk student.pk %}"> 
   Zgodovina oddaj ({{problem.problem_set.title}} - {{ student.get_full_name}})</a>
   <a class="navbar-brand topnav" href="#">
     	{# Translators: Progress of students in a problem set - heading in navigation #}
@@ -20,7 +20,7 @@
 <div class="content-section-a tomo-top-section">
   <div class="container tomo-task-solutions">
     <div class="tomo-task">
-      <h3>{{ problem.title }} - stanje oddaj za učenca {{ student.get_full_name }} ob času <span class='color1'> {{ historical_attempt.submission_date }}</span></h3>
+      <h3>{{ problem.title }} - stanje oddaj za učenca {{ student.get_full_name }} ob času <span class='color1'> {{ historical_attempt.history_date }}</span></h3>
       {% if problem_set.description and problem_set.description.strip %}
       {{ problem_set.description|latex_markdown }}
       {% endif %}
@@ -31,7 +31,11 @@
             {% for part in parts %}
             <li class="list-group-item">
               {# Translators: in solution comparison table #}
-              <p>{{ forloop.counter }}. {% trans 'part' %}</p>
+              {% if show_teacher_forms %}
+                <a href="{% url 'user_problem_solution_through_time' student.pk part.pk %}"><p>{{ forloop.counter }}. {% trans 'part' %}</p> </a>
+              {% else %}
+                <p>{{ forloop.counter }}. {% trans 'part' %}</p>
+              {% endif %}
               <div class="row">
                 <div class="row-height">
                   <div class="col-xs-12 col-sm-6 col-sm-height">
@@ -43,13 +47,13 @@
                         {% endif %}
                       </div>
                       {# Translators: Title of user solutions column. #}
-                      {% trans 'Your solution' %}
+                      {% trans 'Your solution' %} 
                     </div>
                     <div class="inside inside-full-height">
                       <div class="content">
                         <div class="tomo-solution-code-user">
                           {% if part.attempt %}
-                          {% trans 'Last submission time:' %} {{ part.attempt.submission_date }}
+                          {% trans 'Last submission time:' %} {{ part.attempt.history_date }}
                           <div class="tomo-pre">{{ part.attempt.solution }}</div>
                           {% else %}
                           {# Translators: in solution comparison table #}
