--- a/web/templates/statistics/submission_history_problemset.html
+++ b/web/templates/statistics/submission_history_problemset.html
@@ -1,6 +1,6 @@
 {% extends 'statistics/contents.html' %}
 
-{% block statistics_section_name %}- zgodovina oddaj {% endblock %}
+{% block statistics_section_name %}-> zgodovina oddaj {% endblock %}
 
 {% block statistics_content %}
 
