--- a/web/templates/statistics/user_submission_history.html
+++ b/web/templates/statistics/user_submission_history.html
@@ -1,8 +1,6 @@
 {% extends 'statistics/contents.html' %}
 {% load staticfiles %}
 
-{% block statistics_section_name %}-> zgodovina oddaj {% endblock %}
-
 {% block statistics_content %}
 
 <div class='col-md-2'>
@@ -33,7 +31,7 @@
     </div>
     <div class='col-md-7'> &nbsp;
     {% for part in problem.parts.all %}
-        <a href="{% url 'user_problem_solution_through_time' student.pk part.pk %}"> <i class="fa fa-arrow-down" aria-hidden="true"></i> </a>
+        <a href="{% url 'user_problem_solution_through_time' student.pk part.pk %}"> <i class="fa fa-arrow-down"></i> </a>
     {% endfor %}
     </div>
     <br>
