--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -81,6 +81,8 @@
                         <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="{% url 'terms_of_service' %}">{% trans 'Terms of service' %}</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
+                        <li><a href="{% url 'privacy_policy' %}">{% trans 'Privacy policy' %}</a></li>
+                        <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="mailto:info@projekt-tomo.si">{% trans 'Contact' %}</a></li>
                     </ul>
                     
