Update privacy policy

--- a/web/templates/privacy_policy.html
+++ b/web/templates/privacy_policy.html
@@ -142,6 +142,9 @@
 <h3>Security of Your Personal Data</h3>
 <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.</p>
 
+<h3>Deletion of Your Personal Data</h3>
+<p>You have the right to delete Your Personal Data. To make a request for deletion, you can contact us at info@projekt-tomo.si.</p>
+
 
 
 
