Add privacy policy changelog

--- a/web/templates/privacy_policy.html
+++ b/web/templates/privacy_policy.html
@@ -14,7 +14,12 @@
 <div class="content-section-a tomo-top-section"><div class="container">
 <h2>Privacy Policy</h2>
 
-<p>Last updated: May 27, 2020</p>
+<p>Last changes (<a href="https://github.com/ul-fmf/projekt-tomo/commits/master/web/templates/privacy_policy.html">see full changelog</a>)</p>
+ 
+<ul>
+  <li>September 28, 2022 - added instructions for deletion of personal data</li>
+  <li>May 27, 2020 - privacy policy created</li>
+</ul>
 
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 
