load staticfiles -> load static

--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 <li class="list-group-item">
   {% if course.is_taught %}
   {% spaceless %}
