Correctly redirect after login_required

--- a/web/templates/registration/login.html
+++ b/web/templates/registration/login.html
@@ -27,11 +27,11 @@
         </div>
         <div class="form-group">
           <a class="btn btn-default" style="font-size: 0.8em" role="button"
-             href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">
+             href="{% url 'social:begin' 'facebook' %}?next={{ next }}">
              <i class="fa fa-facebook fa-lg"></i> {% trans 'Facebook' %}
           </a>
           <a class="btn btn-default" style="font-size: 0.8em" role="button"
-             href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}">
+             href="{% url 'social:begin' 'google-oauth2' %}?next={{ next }}">
              <i class="fa fa-google fa-lg"></i> {% trans 'Google' %}
           </a>
         </div>
