--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -74,37 +74,37 @@
                         <span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="{% url 'problem_attempt_file' problem.id %}">
+                        <li><a href="{% url 'problem_attempt_file' problem.problem_set.course.id problem.problem_set.id problem.id %}">
                             {# Translators: Datoteka za reševanje #}
                             {% trans "File for solving" %}
                         </a></li>
-                        <li><a href="{% url 'problem_edit_file' problem.id %}">
+                        <li><a href="{% url 'problem_edit_file' problem.problem_set.course.id problem.problem_set.id problem.id %}">
                             {# Translators: Datoteka za urejanje #}
                             {% trans "File for editing" %}
                         </a></li>
                       </ul>
                     </div>
                     <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Solutions" %}">
-                      <a class="btn btn-default solutions-btn" href="{% url 'problem_solution' problem.id user.id %}" role="button" data-toggle="tooltip" title="{% trans "Solutions" %}"><i class="fa fa-lightbulb-o fa-lg"></i></a>
+                      <a class="btn btn-default solutions-btn" href="{% url 'problem_solution' problem.problem_set.course.id problem.problem_set.id problem.id user.id %}" role="button" data-toggle="tooltip" title="{% trans "Solutions" %}"><i class="fa fa-lightbulb-o fa-lg"></i></a>
                     </div>
                     <div class="btn-group btn-group-sm" role="group" aria-label="Edit">
-                        <a class="btn btn-default edit-btn" href="{% url 'problem_move' problem.id -1 %}" role="button" aria-label="Move Up"
+                        <a class="btn btn-default edit-btn" href="{% url 'problem_move' problem.problem_set.course.id problem.problem_set.id problem.id -1 %}" role="button" aria-label="Move Up"
                             data-toggle="tooltip" title="{% trans 'Move up' %}" data-container="body">
                           <i class="fa fa-arrow-up" aria-hidden="true"></i>
                         </a>
-                        <a class="btn btn-default edit-btn" href="{% url 'problem_move' problem.id 1 %}" role="button" aria-label="Move Down"
+                        <a class="btn btn-default edit-btn" href="{% url 'problem_move' problem.problem_set.course.id problem.problem_set.id problem.id 1 %}" role="button" aria-label="Move Down"
                             data-toggle="tooltip" title="{% trans 'Move down' %}" data-container="body">
                           <i class="fa fa-arrow-down" aria-hidden="true"></i>
                         </a>
-                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Update" data-url="{% url 'problem_update' problem.id %}"
+                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Update" data-url="{% url 'problem_update' problem.problem_set.course.id problem.problem_set.id problem.id %}"
                             data-toggle="tooltip" title="{% trans 'Update' %}" data-container="body">
                           <i class="fa fa-cog" aria-hidden="true"></i>
                         </a>
-                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Copy" data-url="{% url 'problem_copy' problem.id %}"
+                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Copy" data-url="{% url 'problem_copy' problem.problem_set.course.id problem.problem_set.id problem.id %}"
                             data-toggle="tooltip" title="{% trans 'Copy' %}" data-container="body">
                           <i class="fa fa-copy" aria-hidden="true"></i>
                         </a>
-                        <a class="btn btn-default btn-for-modal edit-btn trash-btn" aria-label="Delete" data-url="{% url 'problem_delete' problem.id %}">
+                        <a class="btn btn-default btn-for-modal edit-btn trash-btn" aria-label="Delete" data-url="{% url 'problem_delete' problem.problem_set.course.id problem.problem_set.id problem.id %}">
                           <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
                     </div>
@@ -113,16 +113,16 @@
 
                     <div class="btn-group btn-group-sm" role="group" aria-label="{% trans 'Download' %}">
                       {# Translators: Button for downloading a single problem file. #}
-                      <a class="btn btn-default download-btn" href="{% url 'problem_attempt_file' problem.id %}" role="button" data-toggle="tooltip" title="
+                      <a class="btn btn-default download-btn" href="{% url 'problem_attempt_file' problem.problem_set.course.id problem.problem_set.id problem.id %}" role="button" data-toggle="tooltip" title="
                       {% trans "Download this problem file" %}"><i class="fa fa-download fa-lg"></i></a>
                     </div>
                     <div class="btn-group btn-group-sm" role="group" aria-label="{% trans "Solutions" %}">
-                      <a class="btn btn-default solutions-btn" href="{% url 'problem_solution' problem.id user.id %}" role="button" data-toggle="tooltip" title="{% trans "Solutions" %}"><i class="fa fa-lightbulb-o fa-lg"></i></a>
+                      <a class="btn btn-default solutions-btn" href="{% url 'problem_solution' problem.problem_set.course.id problem.problem_set.id problem.id user.id %}" role="button" data-toggle="tooltip" title="{% trans "Solutions" %}"><i class="fa fa-lightbulb-o fa-lg"></i></a>
                     </div>
 
                     {% if user.is_teacher_anywhere %}
                     <div class="btn-group btn-group-sm" role="group" aria-label="Edit">
-                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Copy" data-url="{% url 'problem_copy' problem.id %}"
+                        <a class="btn btn-default btn-for-modal edit-btn" aria-label="Copy" data-url="{% url 'problem_copy' problem.problem_set.course.id problem.problem_set.id problem.id %}"
                             data-toggle="tooltip" title="{% trans 'Copy' %}" data-container="body">
                         <i class="fa fa-copy" aria-hidden="true"></i>
                         </a>
@@ -157,7 +157,7 @@
         {% endfor %}
         {% if show_teacher_forms %}
         <hr>
-                    <button class="btn btn-default btn-lg btn-for-modal tomo-add-task" aria-label="Create" data-url="{% url 'problem_create' problem_set.id %}">
+                    <button class="btn btn-default btn-lg btn-for-modal tomo-add-task" aria-label="Create" data-url="{% url 'problem_create' problem_set.course.id problem_set.id %}">
                 <i class="fa fa-download fa-plus"></i>
                      {# Translators: Button for creating new problem. #}
                      {% trans "Add new problem" %}
