Revert "Move problem set and group views under course"
This reverts commit f9c4e1bd5a01f5b27f8a9de0c4760b36591a147b.

--- a/web/templates/courses/course_groups.html
+++ b/web/templates/courses/course_groups.html
@@ -24,13 +24,13 @@
       <div class="col-md-4">
         <h3 id="{{ group.pk }}">{{ group.title }}</h3>
         <div class="btn-group btn-group-sm" role="group" aria-label="Update">
-                    <button class="btn btn-default btn-for-modal" data-url="{% url 'course_groups_update' group.course.pk group.pk %}" aria-label="Update"
+                    <button class="btn btn-default btn-for-modal" data-url="{% url 'course_groups_update' group.pk %}" aria-label="Update"
                         data-toggle="tooltip" title="{% trans 'Edit' %}" data-container:'body' data-viewport: '#viewport' id="viewport">
                         <i class="fa fa-cog" aria-hidden="true"></i>
                     </button>
         </div>
         <div class="btn-group btn-group-sm" role="group" aria-label="Delete">
-          <button class="btn btn-default btn-for-modal" data-url="{% url 'course_groups_confirm_delete' group.course.pk group.pk %}" aria-label="Delete"
+          <button class="btn btn-default btn-for-modal" data-url="{% url 'course_groups_confirm_delete' group.pk %}" aria-label="Delete"
             data-toggle="tooltip" title="{% trans 'Delete' %}" data-container:'body'>
             <i class="fa fa-trash-o" aria-hidden="true"></i>
           </button>
