--- a/web/templates/statistics/user_submission_history.html
+++ b/web/templates/statistics/user_submission_history.html
@@ -26,39 +26,45 @@
 <div class='col-md-6' style="height: 100vh; overflow:auto">
 <br>
 {% for problem, timeline in history.items %}
-    <div class='col-md-5'>
-        {{ problem.title }}
-    </div>
-    <div class='col-md-7'> &nbsp;
-    {% for part in problem.parts.all %}
-        <a href="{% url 'user_problem_solution_through_time' student.pk part.pk %}"> <i class="fa fa-arrow-down"></i> </a>
-    {% endfor %}
-    </div>
-    <br>
-    <div class=row>
-        <div class='col-md-2'>
-        </div>
-        <div class='col-md-10'>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col" class="tomo-overview-student-remove-border">
+                    {{ problem.title }}
+                </th>
+                {% for part in problem.parts.all %}
+                    <th scope="col" class="tomo-overview-student-thin tomo-overview-student-remove-border">
+                        <a href="{% url 'user_problem_solution_through_time' student.pk part.pk %}"> <i class="fa fa-arrow-down"></i> </a>
+                    </th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
             {% for time, state in timeline %}
-                {{ time }} : 
-                {% for attempt in state %}
-                    {% if attempt != None %}
-                        <a href="{% url 'user_problem_solution_at_time' attempt.pk %}">
-                            {% if attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
-                            {% elif attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
-                            {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
-                            {% endif %} </a>
-                    {% else %}
-                        {% if attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
-                        {% elif attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
-                        {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %} <br>
+                <tr>
+                    <td class="tomo-overview-student-date">
+                        {{ time }} : 
+                    </td>
+                    {% for attempt in state %}
+                        <td class="tomo-overview-student-thin">
+                            {% if attempt != None %}
+                                <a href="{% url 'user_problem_solution_at_time' attempt.pk %}">
+                                    {% if attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
+                                    {% elif attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
+                                    {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
+                                    {% endif %} </a>
+                            {% else %}
+                                {% if attempt.valid %}<i class="color5 fa fa-check-circle fa-lg"></i>
+                                {% elif attempt %}<i class="color3 fa fa-question-circle fa-lg"></i>
+                                {% else %}<i class="color1 fa fa-times-circle fa-lg"></i>
+                                {% endif %}
+                            {% endif %}
+                        </td>
+                    {% endfor %}
+                </tr>
             {% endfor %}
-            <br>
-        </div>
-    </div>
+        </tbody>
+    </table>
 {% endfor %}
 </div>
 {% endblock %} {# content #}
